Corrected docker image def

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -59,6 +59,11 @@ RUN conda install -qy conda==24.5.0 pip python=3.11 \
 RUN conda install -y -c conda-forge openmm=8.0.0 pdbfixer \
     && conda clean --all --force-pkgs-dirs --yes
 
+RUN pip3 install --upgrade --no-cache-dir \
+      jax==0.4.26 \
+      jaxlib==0.4.26+cuda12.cudnn89 \
+      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+
 COPY . /app/alphafold
 RUN wget -q -P /app/alphafold/alphafold/common/ \
   https://git.scicore.unibas.ch/schwede/openstructure/-/raw/7102c63615b64735c4941278d92b554ec94415f8/modules/mol/alg/src/stereo_chemical_props.txt
@@ -66,10 +71,6 @@ RUN wget -q -P /app/alphafold/alphafold/common/ \
 # Install pip packages.
 RUN pip3 install --upgrade pip --no-cache-dir \
     && pip3 install -r /app/alphafold/requirements.txt --no-cache-dir \
-    && pip3 install --upgrade --no-cache-dir \
-      jax==0.4.26 \
-      jaxlib==0.4.26+cuda12.cudnn89 \
-      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 
 # Add SETUID bit to the ldconfig binary so that non-root users can run it.
 RUN chmod u+s /sbin/ldconfig.real
