--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -63,6 +63,7 @@ RUN pip3 install --upgrade --no-cache-dir \
       jax==0.4.26 \
       jaxlib==0.4.26+cuda12.cudnn89 \
       -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+RUN chmod u+s /sbin/ldconfig.real
 
 COPY . /app/alphafold
 RUN wget -q -P /app/alphafold/alphafold/common/ \
