--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -55,9 +55,10 @@ ENV PATH="/opt/conda/bin:$PATH"
 ENV LD_LIBRARY_PATH="/opt/conda/lib:$LD_LIBRARY_PATH"
 
 
-RUN conda install -qy conda==24.5.0 pip python=3.11 \
+RUN conda install -qy conda==24.5.0 pip python=3.11
 
 COPY . /app/alphafold
+
 RUN wget -q -P /app/alphafold/alphafold/common/ \
   https://git.scicore.unibas.ch/schwede/openstructure/-/raw/7102c63615b64735c4941278d92b554ec94415f8/modules/mol/alg/src/stereo_chemical_props.txt
 
