--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,11 +65,15 @@ RUN wget -q -P /app/alphafold/alphafold/common/ \
 # Install pip packages.
 RUN pip3 install --upgrade pip --no-cache-dir \
     && pip3 install -r /app/alphafold/requirements.txt --no-cache-dir \
-    && pip3 install --upgrade --no-cache-dir \
-      jax==0.4.26 \
-      jaxlib==0.4.26+cuda12.cudnn89 \
+    && pip3 install --upgrade --no-cache-dir
+RUN pip3 install jax[cuda12_pip]
       -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+
+
 ########## No nvcc installed above
+#      jax==0.4.26 \
+#      jaxlib==0.4.26+cuda12.cudnn89 \
+
 
 RUN conda install nvidia/label/cuda-12.2.2::cuda-nvcc
 
