added other jax install

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,8 +65,10 @@ RUN wget -q -P /app/alphafold/alphafold/common/ \
 # Install pip packages.
 RUN pip3 install --upgrade pip --no-cache-dir \
     && pip3 install -r /app/alphafold/requirements.txt --no-cache-dir
-RUN pip3 install jax==0.4.26 jaxlib==0.4.26+cuda12.cudnn89\
-      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+#RUN pip3 install jax==0.4.26 jaxlib==0.4.26+cuda12.cudnn89\
+#      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+
+RUN conda install jax[cuda12_cudnn89] -c conda-forge
 
 
 ########## No nvcc installed above
@@ -99,4 +101,7 @@ RUN echo $'#!/bin/bash\n\
 ldconfig\n\
 python /app/alphafold/run_alphafold.py "$@"' > /app/run_alphafold.sh \
   && chmod +x /app/run_alphafold.sh
+
+RUN conda install -c conda-forge ncurses
+
 ENTRYPOINT ["/app/run_alphafold.sh"]
