--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -68,10 +68,9 @@ RUN pip3 install --upgrade pip --no-cache-dir \
 
 
 
-#RUN pip3 install jax==0.4.26 jaxlib==0.4.26+cuda12.cudnn89\
-#      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+RUN pip3 install jax==0.4.26 jaxlib==0.4.26+cuda12.cudnn89\
+      -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 
-#RUN conda install jax[cuda12_cudnn89] -c conda-forge
 
 
 ########## No nvcc installed above
